--- a/TrabajoParcialGrafica/TrabajoParcialGrafica/TrabajoParcialGrafica.vcxproj
+++ b/TrabajoParcialGrafica/TrabajoParcialGrafica/TrabajoParcialGrafica.vcxproj
@@ -151,6 +151,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="readFile.hpp" />
+    <ClInclude Include="stb_image.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
