--- a/TrabajoParcialGrafica/TrabajoParcialGrafica/TrabajoParcialGrafica.vcxproj.filters
+++ b/TrabajoParcialGrafica/TrabajoParcialGrafica/TrabajoParcialGrafica.vcxproj.filters
@@ -34,5 +34,8 @@
     <ClInclude Include="readFile.hpp">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="stb_image.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
