--- a/TrabajoParcialGrafica/TrabajoParcialGrafica/TrabajoParcialGrafica.vcxproj
+++ b/TrabajoParcialGrafica/TrabajoParcialGrafica/TrabajoParcialGrafica.vcxproj
@@ -122,7 +122,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>glfw3.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glfw3.lib;opengl32.lib;assimp-vc140-mt.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -142,12 +142,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\src\glad.c" />
+    <ClCompile Include="..\..\..\LibreriaCG\glad.c" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="GLSL\codigo.fs" />
     <None Include="GLSL\codigo.vs" />
+    <None Include="GLSL\light.fs" />
+    <None Include="GLSL\light.vs" />
+    <None Include="GLSL\multiplelights.fs" />
+    <None Include="GLSL\multiplelights.vs" />
+    <None Include="light.fs" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="readFile.hpp" />
